--- a/package.json
+++ b/package.json
@@ -11,20 +11,19 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.21.0",
-    "glamor": "^2.20.40",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-awesome-spinners": "^1.3.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-redux-firebase": "^3.7.0",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
-    "redux-firestore": "^0.13.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
